made no-internet-access fallback